2016-02-24  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Removed rewriting of EnumDecl. Implicit members in EnumDecl are now
    generated using NTAs instead of by rewriting the EnumDecl.
    * Removed side effects used to generate accessor methods. Accessor
    methods are instead generated using declarative NTAs.
    * Removed the ASTNode.transformation() method which walked over the AST
    to add accessor methods etc.
    * Removed ASTNode.clear() which was used to clear AST nodes after code
    generation (used side effects).

2016-02-23  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Replaced enum constructor transformation side effects by using the new
    nonterminal attribute ConstructorDecl.transformedEnumConstructor().

2016-02-22  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Replaced bridge method generation side effects by using an NTA and
    collection attribute. Bridge methods are no longer generated during
    the transformation phase. Bridge methods are now generated on demand
    during code generation.

2016-02-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Replaced the side effects used to add the "$assertionsDisabled" field
    to a class by using NTAs instead. Assert statements have a new NTA called
    "transformed()" which evaluates to the transformed form of the statement.
    The $assertionsDisabled field is also generated using an NTA.

2016-02-19  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Replaced enum switch transformation side effects. NTAs are now used to
    generate extra fields and methods needed for enum switch statements
    instead of using side effects to modify the BodyDecl list of a TypeDecl.
    Also removed the side effects which modified the actual SwitchStmt and
    nested ConstCase nodes.

    * Removed side effects used to generate bytecode for ClassAccess in the
    Java 4 backend module. This changes the bytecode generation in Java 4