@@ -33,16 +33,11 @@ package org.extendj;
 import java.io.File;
 import java.util.Collection;
 
-import org.extendj.ast.Frontend;
 import org.extendj.ast.CompilationUnit;
-import org.extendj.ast.JavaParser;
-import org.extendj.ast.BytecodeParser;
-import org.extendj.ast.BytecodeReader;
+import org.extendj.ast.Frontend;
 import org.extendj.ast.Problem;
 import org.extendj.ast.Program;
 
-import java.io.FileNotFoundException;
-import java.io.InputStream;
 import java.io.IOException;
 import java.io.PrintStream;
 
@@ -69,9 +64,6 @@ public class JavaCompiler extends Frontend {
     }
   }
 
-  private final JavaParser parser;
-  private final BytecodeReader bytecodeParser;
-
   private Mode mode = Mode.COMPILE;
 
   /**
@@ -87,20 +79,6 @@ public class JavaCompiler extends Frontend {
    */
   protected JavaCompiler(String toolName) {
     super(toolName, ExtendJVersion.getVersion());
-    parser = new JavaParser() {
-      @Override
-      public CompilationUnit parse(InputStream is, String fileName) throws IOException,
-          beaver.Parser.Exception {
-        return new org.extendj.parser.JavaParser().parse(is, fileName);
-      }
-    };
-    bytecodeParser = new BytecodeReader() {
-      @Override
-      public CompilationUnit read(InputStream is, String fullName, Program p)
-          throws FileNotFoundException, IOException {
-        return new BytecodeParser(is, fullName).parse(null, null, p);
-      }
-    };
   }
 
   /**
@@ -120,7 +98,7 @@ public class JavaCompiler extends Frontend {
    * error
    */
   public int run(String args[]) {
-    return run(args, bytecodeParser, parser);
+    return run(args, Program.defaultBytecodeReader(), Program.defaultJavaParser());
   }
 
   @Override
