@@ -1,3 +1,8 @@
+2016-03-08  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Added helper methods to build default bytecode reader and Java parser:
+    Program.defaultBytecodeReader() and Program.defaultJavaParser().
+
 2016-02-24  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Removed rewriting of EnumDecl. Implicit members in EnumDecl are now
